# JeikChat

./: .env  .env.local  .gitignore  API文档.md  Dockerfile  README.md  debug_test_mode.py  docker-compose.yaml  docker-compose.yml  pyproject.toml  start.sh
.trae/skills/rich-markdown/: SKILL.md
backend/: .dockerignore  .env  .env.example  .env.local  Dockerfile  __init__.py  cli.py  config.py  debug_check.py  debug_inspect.py  init.py  main.py  pyproject.toml  requirements.txt  settings.py  test_model.py  test_settings.py
backend/agent/: __init__.py  chatRouterStream.py
backend/agent/adapter/: embedding.py
backend/agent/demo/: cache_test.py  usage_example.py  vstest.py
backend/agent/knowledges/vector_store/: meta.json
backend/agent/mcp/: __init__.py  cache_manager.py  config_loader.py  connection_manager.py  filtered_session.py  filtered_stdio.py  mcp.yaml  mcpToolNode.py  mcp_cache.py  mcpcache.json  models.py
backend/agent/mcp/demo/: debug_tools.py  example_usage.py  inspect_tools.py
backend/agent/prompt/: __init__.py  prompts.yaml
backend/agent/tools/: RAG.py  ToolsProtect.py  __init__.py  calculate.py  getNowTime.py  retrieve_docs.py  web.py  werther.py
backend/api/: __init__.py  chat.py  knowledge.py  model.py  response.py  result.py  test.py
backend/api/routes/: __init__.py  chat.py  file.py  knowledge.py  mcp_config_updater.py  mock.py  model.py  prompt.py  tools.py  tools_stream.py
backend/api/web/: chat.py  knowledge.py  model.py
backend/app/: config.py  main.py  models_config.yaml  prompts.py  prompts.yaml
backend/config/: app_config.yaml  app_info.yaml  models.yaml  prompts.yaml  settings.py
backend/core/: config.py  start_config.py
backend/core/agents/: chat.py
backend/core/api/: __init__.py  result.py  schemas.py
backend/core/api/web/: chat.py  knowledge.py  mock.py  model.py
backend/core/base/: promt.py
backend/core/base/llm/: llms.py  test_llms.py
backend/core/base/llm/demo/: langchain.py  qwen.py
backend/core/services/: __init__.py  chat_service.py  llm_service.py  rag_service.py  singleton.py  stream_manager.py
backend/fileUntils/: RustFs.py
backend/llm/: langchain.py  langchaint.py  llm_untils.py  test.py  test2_enhanced.py
backend/models/: schemas.py
backend/schemas/: __init__.py  chat.py  knowledge.py
backend/services/: __init__.py  chat_service.py  knowledge.py  knowledge_mapping.py  llm.py  llm_service.py  rag.py  stream.py
backend/utils/: result.py
frontend/: index.html  nginx.conf  ngix.conf  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/assets/styles/: globals.css
frontend/src/components/Chat/: ChatContainer.tsx  InputArea.tsx  MessageItem.tsx
frontend/src/components/Common/: Header.tsx  Sidebar.tsx
frontend/src/pages/: AgentToolsPage.tsx  ChatPage.tsx  KnowledgePage.tsx  SettingsPage.tsx
frontend/src/services/: api.ts  chat.ts  client.ts  knowledge.ts
frontend/src/stores/: chatStore.ts  knowledgeStore.ts  settingsStore.ts
frontend/src/types/: chat.ts  config.ts  knowledge.ts
frontend/src/utils/: toast.tsx
