[project]
name = "aichat"
version = "0.1.0"
description = "JeikChat 智能客服系统 - 后端"
requires-python = ">=3.11, <3.14"

dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "pydantic-settings",
    "python-multipart",
    "langchain",
    "langchain-community",
    "langchain-deepseek>=1.0.1",
    "langchain-google-genai>=4.2.1",
    "langchain-qdrant>=1.1.0",
    "langchain-mcp-adapters>=0.2.1",
    "langgraph-checkpoint-postgres",
    "psycopg[binary,pool]",
    "pypdf",
    "python-magic",
    "httpx",
    "aiofiles",
    "boto3>=1.42.69",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
jeikchat = "cli:main"

[tool.setuptools]
py-modules = ["cli"]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"
